<resources>
    <string name="app_name">مصحف الشمرلي</string>
    <string name="title_activity_settings">الإعدادات</string>
    <string name="title_activity_search">البحث</string>
    <string name="title_reciter_list">تحميل التلاوات</string>
    <string name="title_reciter_detail">تحميل تلاوات قارئ</string>
    <string name="downloadPageUrl">http://archive.org/download/shamraly/%03d.png</string>
    <string name="downloadPageUrl2">https://raw.githubusercontent.com/Mr-DDDAlKilanny/shamraly-images/master/%03d.png</string>
    <string name="title_activity_goto">مصحف الشمرلي</string>
    <string name="donwloadTafaseerDbUrl">https://archive.org/download/tafaseer_201905/tafaseer.zip</string>
    <string name="donwloadTafaseerDbUrl2">https://raw.githubusercontent.com/Mr-DDDAlKilanny/tafseer-sqlite-db/master/tafaseer.zip</string>
    <string name="tafaseerDbZipLength">36486134</string>
    <string name="request_storage_permission_msg">يتطلب التحميل الوصول إلى الذاكرة. اضغط موافق ليظهر لك تأكيد الحصول على إذن الوصول للذاكرة.
        إذا لم يظهر التأكيد يمكنك تفعيل الإذن من إعدادات الجهاز ثم اختر التطبيقات ثم اختر مصحف الشمرلي ثم فعل الأذونات</string>
    <string name="title_activity_welcome2">Welcome2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="maqraah_student_url">https://forms.gle/a98nAEZiguT79SD5A</string>
    <string name="maqraah_teacher_url">https://forms.gle/KP7qR4axvgbCszWXA</string>

    <string name="ad_text">الحمد لله والصلاة والسلام على محمد وآله وصحبه أجمعين، وبعد:
        هذا التطبيق يمكنك من ضبط منبه قوي ذو إزعاج،
        حتى تتمكن من عدم النوم عن الصلاة مهما كانت الأسباب!
        لكي توقف المنبه، يجب أن تقوم أولا بتحريك الهاتف عدة مرات، أو تقوم بحل مسائل حسابية، أو تقوم بتصوير رمز باركود!
        وليس هذا فقط، بل يمكن أيضا ضبط المنبه قبل الصلاة بـ 30 دقيقة أو ساعة مثلا!</string>
    <string name="prayer_alarm">منبه صلاة المسلم</string>
    <string name="ad2_text">الحمد لله والصلاة والسلام على محمد وآله وصحبه أجمعين، وبعد:
        رن على أصدقائك وأقاربك لإيقاظهم لصلاة الفجر، وساهم في الأمر بالمعروف.
        هذا البرنامج يقوم نيابة عنك بالاتصال بهم مرات عدة حتى يقوموا برفض المكالمة
         كل ما عليك إضافة الأرقام من الأسماء الخاصة بك ليتم الرن عليهم حتى يستيقظوا
    </string>
    <string name="auto_caller">الرنان الآلي</string>
    <string name="title_activity_external_recites_download">ExternalRecitesDownloadActivity</string>
    <string name="dayAyahTopic">DayAyah</string>
    <string name="title_messagetopic_list">واحة تطبيق مصحف الشمرلي</string>
    <string name="title_messagetopic_detail"> </string>
    <string name="intro_day_msg">بسم الله الرحمن الرحيم\nالحمد لله رب العالمين\nاللهم صل على محمد وآله وصحبه أجمعين</string>
    <string name="title_activity_videos">المرئيات</string>
    <string name="allDaysExpect1Day">جميع الأيام عدا %1$s</string>
    <string name="allDaysExpect2Days">كل يوم عدا %1$s و %2$s</string>
    <string name="friday">الجمعة</string>
    <string name="saturday">السبت</string>
    <string name="sunday">الأحد</string>
    <string name="monday">الاثنين</string>
    <string name="tuesday">الثلاثاء</string>
    <string name="wednesday">الأربعاء</string>
    <string name="thursday">الخميس</string>
</resources>
