<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditAlarmActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="اختر أيام التنبيه الأسبوعية للمنبه"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="4"
                    android:rowCount="2">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkFri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friday" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkSat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkSun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkMon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monday" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkTues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tuesday" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkWedns"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkThurs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday" />
                </GridLayout>

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>

    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnCancel"
            style="@style/Widget.Button.NextPrev"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="إلغاء"/>

        <TextView
            android:id="@+id/btnSave"
            style="@style/Widget.Button.NextPrev"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="حفظ"/>

    </RelativeLayout>
</RelativeLayout>